# cjm-workflow-hub-tui

./: README.md  pyproject.toml
cjm_workflow_hub_tui/: app.py  cli.py  spine.py
tests/: test_hub_logic.py
tests_manual/: pilot_paint_probe.py
